--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <!-- Certificate 1 -->
 <div class="certificate-card bg-white/30 backdrop-blur-sm rounded-lg overflow-hidden shadow-lg border border-white/20 hover:transform hover:scale-105 transition-all duration-300">
 <div class="h-48 bg-emerald-50/30 flex items-center justify-center p-6">
-<img src="./img/ChatGPT Image Jun 11, 2025, 03_01_47 PM.png" alt="Certificate" class="max-w-full max-h-full object-contain">
+<img src="./img/oracle.png" alt="Certificate" class="max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
 <h3 class="text-xl font-semibold mb-2">Oracle Cloud Infrastructure 2024 Generative AI Professional</h3>
@@ -891,3 +891,4 @@ animateSkills();
 </script>
 </body>
 </html>
+
