--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <!-- Certificate 7 -->
  <div class="certificate-card bg-white rounded-lg overflow-hidden shadow-md">
 <div class="h-48 bg-gray-100 flex items-center justify-center p-6">
-<img src="./img/Black Modern Minimalist Simple Technology Banner22.png" width="350" height="300" alt="Artificial Intelligence Foundation class="max-w-full max-h-full object-contain">
+<img src="./img/infosys springbird.png" width="350" height="300" alt="Artificial Intelligence Foundation class="max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
 <h3 class="text-xl font-semibold mb-2">Artificial Intelligence Foundation</h3>
@@ -891,4 +891,5 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
