--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <img src="./img/eletronic art.png" alt="EA Software Engineering Certificate" class="max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
-<h3 class="text-xl font-semibold mb-2">Electronic Arts - Software Engineering Job Simulation</h3>
-<p class="text-gray-600 mb-3">Electronic Arts</p>
+<h3 class="text-xl font-semibold mb-2">HP Life Data Science & Analytics</h3>
+<p class="text-gray-600 mb-3">HP Life</p>
 <p class="text-gray-700 mb-4">Completed hands-on software engineering simulation focusing on game development and industry practices.</p>
 <div class="flex justify-between items-center">
 <span class="text-gray-500">Issued: 2025</span>
@@ -460,9 +460,9 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <img src="./img/ChatGPT Image Jun 11, 2025, 03_08_37 PM.png" alt="IEEEXtreme Certificate" class="max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
-<h3 class="text-xl font-semibold mb-2">IEEEXtreme 18.0 Programming Competition</h3>
-<p class="text-gray-600 mb-3">IEEE</p>
-<p class="text-gray-700 mb-4">Participated in global 24-hour programming competition, demonstrating problem-solving and coding skills.</p>
+<h3 class="text-xl font-semibold mb-2">IBM SkillsBuild AI Certificate</h3>
+<p class="text-gray-600 mb-3">IBM SkillsBuild</p>
+<p class="text-gray-700 mb-4"> Learned AI concepts, algorithms, and real-world applications. </p>
 <div class="flex justify-between items-center">
 <span class="text-gray-500">Issued: 2024</span>
 <a href="./certificate/Brave.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
@@ -478,9 +478,9 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <img src="./img/react workshop.png" alt="React Workshop Certificate" class="max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
-<h3 class="text-xl font-semibold mb-2">React Workshop Completion Certificate – Spotify Clone</h3>
-<p class="text-gray-600 mb-3">Let's upgrade</p>
-<p class="text-gray-700 mb-4">Built a Spotify clone using React.js, implementing modern web development practices and UI components.</p>
+<h3 class="text-xl font-semibold mb-2">Edunet – Artificial Intelligence</h3>
+<p class="text-gray-600 mb-3">Edunet</p>
+<p class="text-gray-700 mb-4">Completed foundational training in AI principles and applications.</p>
 <div class="flex justify-between items-center">
 <span class="text-gray-500">Issued: 2025</span>
 <a href="./certificate/LUESCAPR12572 (1).pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
@@ -532,9 +532,9 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <img src="./img/infosys springbird.png" width="350" height="300" alt="Artificial Intelligence Foundation class="max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
-<h3 class="text-xl font-semibold mb-2">Artificial Intelligence Foundation</h3>
+<h3 class="text-xl font-semibold mb-2">Generative AI Landscape</h3>
 <p class="text-gray-600 mb-3">Infosys Spring Board</p>
-<p class="text-gray-700 mb-4">Comprehensive introduction to Artificial Intelligence Foundation concepts.</p>
+<p class="text-gray-700 mb-4">Explored the ecosystem, trends, and applications of generative AI technologies.</p>
 <div class="flex justify-between items-center">
 <span class="text-gray-500">Issued: 2024</span>
 <a href="./certificate/2023PECAI340 INFOSYS CERTIFICATE.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
@@ -568,9 +568,9 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <img src="./img/some one.jpg" width="250" height="150" alt="Artificial Intelligence Foundation class="max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
-<h3 class="text-xl font-semibold mb-2">Introduction to Programming with Python</h3>
-<p class="text-gray-600 mb-3">Finessefleet Foundation</p>
-<p class="text-gray-700 mb-4">Participated in a foundational programming course covering data types, control flow, functions, and problem-solving in Python. Demonstrated sincere academic interest throughout the course.</p>
+<h3 class="text-xl font-semibold mb-2">Remote Sensing Data Analytics for Crop Production Forecasting</h3>
+<p class="text-gray-600 mb-3">ISRO LLM</p>
+<p class="text-gray-700 mb-4">Gained proficiency in analyzing satellite data for agricultural forecasting.</p>
 <div class="flex justify-between items-center">
 <span class="text-gray-500">Issued: 2025</span>
 <a href="./certificate/2025CSMOOC0126_cropped (1).pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
@@ -891,5 +891,6 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
