--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ color: white;
 <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm">Node.js</span>
 <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm">Tailwindcss</span>
 </div>
-<a href="https://drive.google.com/drive/folders/13ix5rxOcZPsxgHFQ-b2SlO7nHFRnQBDA?usp=drive_link" target="_blank" class="text-primary font-medium flex items-center hover:underline">
+<a href="https://github.com/Yeswanth-Geattam/GreenhouseGasEmissionProject" target="_blank" class="text-primary font-medium flex items-center hover:underline">
 View Project <i class="ri-arrow-right-line ml-1"></i>
 </a>
 </div>
@@ -891,6 +891,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
