--- a/index.html
+++ b/index.html
@@ -309,12 +309,12 @@ color: white;
 <img src="./img/Music Website.png" alt="E-commerce Platform" class="w-full h-full object-cover object-top transition-transform duration-500 hover:scale-110">
 </div>
 <div class="p-6">
-<h3 class="text-xl font-semibold mb-2">Tech heaven music website</h3>
-<p class="text-gray-600 mb-4">A complete music platform with a clean and modern design.</p>
+<h3 class="text-xl font-semibold mb-2">Green House Emission Project</h3>
+<p class="text-gray-600 mb-4">An interactive Python tool using linear regression to visualize historical per-capita CO₂ emissions (1750–2021) and project future trends (2025–2035) across any country </p>
 <div class="flex flex-wrap gap-2 mb-4">
-<span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm">React</span>
-<span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm">Node.js</span>
-<span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm">Tailwindcss</span>
+<span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm">Machine Learning</span>
+<span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm">HTML</span>
+<span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm">Python</span>
 </div>
 <a href="https://github.com/Yeswanth-Geattam/GreenhouseGasEmissionProject" target="_blank" class="text-primary font-medium flex items-center hover:underline">
 View Project <i class="ri-arrow-right-line ml-1"></i>
@@ -891,6 +891,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
