--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ color: white;
 </div>
 <div class="p-6">
 <h3 class="text-xl font-semibold mb-2">Green House Emission Project</h3>
-<p class="text-gray-600 mb-4">An interactive Python tool using linear regression to visualize historical per-capita CO₂ emissions (1750–2021) and project future trends (2025–2035) across any country </p>
+<p class="text-gray-600 mb-4">An interactive Python tool using linear regression to visualize historical per-capita CO₂ emissions (1750–2021) and project future trends (2025–2035) across any country. </p>
 <div class="flex flex-wrap gap-2 mb-4">
 <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm">Machine Learning</span>
 <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm">HTML</span>
@@ -335,7 +335,7 @@ Built entirely with HTML to demonstrate foundational web development proficiency
 <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm">Semantic Markup</span>
 <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm">Static Site</span>
 </div>
-<a href="https://github.com/yxshx6tence/yxshx6tence.github.io.git" target="_blank" class="text-primary font-medium flex items-center hover:underline">
+<a href="https://github.com/Yeswanth-Geattam/Yeswanth-Geattam.github.io" target="_blank" class="text-primary font-medium flex items-center hover:underline">
 View Project <i class="ri-arrow-right-line ml-1"></i>
 </a>
 </div>
@@ -891,6 +891,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
