--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <h3 class="text-2xl font-semibold text-white">Work Experience</h3>
 </div>
 <div class="timeline-item">
-<h4 class="text-xl font-semibold text-white">Web developmentIntern</h4>
+<h4 class="text-xl font-semibold text-white">Web development Intern</h4>
 <p class="text-primary font-medium">vaultofcodes | June 2025 - June 2025 (1 month)</p>
 <p class="text-gray-300 mt-2">Completed a 4-week internship focused on web development. Gained practical exposure to building responsive interfaces and applying professional software development practices.</p>
 <p class="text-gray-300 mt-2"><b>Outcome:</b> Developed key skills in frontend development and team collaboration, maintaining a consistent work ethic and high job knowledge throughout the program.</p>
@@ -377,6 +377,13 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <p class="text-gray-300 mt-2">As a Green Intern at 1M1B (One Million for One Billion), I participated in sustainability-focused workshops and expert-led sessions on environmental innovation. I explored climate change challenges and developed solutions aligned with the UN Sustainable Development Goals. The internship helped me enhance my leadership, problem-solving, and innovation skills in the context of environmental responsibility.</p>
 <p class="text-gray-300 mt-2"><b>Outcome:</b> Collaborated with peers to ideate sustainable tech-driven solutions.</p>
 <p class="text-gray-400 mt-2">#GreenInternship #Sustainability</p>
+</div>
+<div class="timeline-item">
+<h4 class="text-xl font-semibold text-white">Green Skills</h4>
+<p class="text-primary font-medium">Edunet Foundation (Shell) |July 2025 - July 2025 (2 month)</p>
+<p class="text-gray-300 mt-2">Developed a Python-based CO₂ emission prediction tool using pandas, numpy, matplotlib, and scikit-learn.</p>
+<p class="text-gray-300 mt-2"><b>Outcome:</b> Created an interactive tool that forecasts country-specific CO₂ emissions for 2025–2035, helping visualize environmental trends for sustainability insights.</p>
+<p class="text-gray-400 mt-2">#GreenSkills #MachineLearning</p>
 </div>
 </div>
 <!-- Education -->
@@ -891,6 +898,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
