--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -222,7 +221,7 @@ color: white;
 </div>
 </div>
 </nav>
-<!-- Hero Section -->
+<!-- Home Section -->
 <section id="home" class="section gradient-bg flex items-center justify-center">
 <div class="container mx-auto px-6">
 <div class="max-w-4xl mx-auto text-center">
@@ -898,6 +897,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
