--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ color: white;
 <div class="container mx-auto px-6">
 <div class="max-w-4xl mx-auto text-center">
 <div class="w-32 h-32 mx-auto mb-8 rounded-full overflow-hidden border-4 border-primary shadow-lg">
-<img src="C:\Users\GEATTAM SHOBHAN BABU\Downloads\Colorful Photo Rainbow Facebook Cover.png" alt="G Yeswanth" class="w-full h-full object-cover object-top">
+<img src="./img/Bright Gradient Lettering Rainbow Facebook Cover.png" alt="G Yeswanth" class="w-full h-full object-cover object-top">
 </div>
 <h1 class="text-5xl md:text-6xl font-bold text-white mb-6">Hi, I'm G Yeswanth</h1>
 <p class="text-xl md:text-2xl text-white mb-10">Front-End Developer | B.Tech AI&DS Student</p>
@@ -897,6 +897,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
