--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ color: white;
 </div>
 </nav>
 <!-- Home Section -->
-<section id="home" class="section gradient-bg flex items-center justify-center">
+<section id="home" class="section flex items-center justify-center" style="background: linear-gradient(rgba(26, 28, 46, 0.9), rgba(26, 28, 46, 0.9)), url("./img/Bright Gradient Lettering Rainbow Facebook Cover.png");">
 <div class="container mx-auto px-6">
 <div class="max-w-4xl mx-auto text-center">
 <div class="w-32 h-32 mx-auto mb-8 rounded-full overflow-hidden border-4 border-primary shadow-lg">
@@ -897,6 +897,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
