--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@ color: white;
         #00ff00, #00ff80, #00ffff, #0080ff, 
         #0000ff, #8000ff, #ff00ff, #ff0080);
         background-size: 1400% 1400%;
-        animation: rainbow 12s ease infinite;"><div class="container mx-auto px-6">
+        animation: rainbow 12s ease infinite;">
+<div class="container mx-auto px-6">
 <div class="max-w-4xl mx-auto text-center">
 <div class="w-32 h-32 mx-auto mb-8 rounded-full overflow-hidden border-4 border-primary shadow-lg">
 <img src="./img/Bright Gradient Lettering Rainbow Facebook Cover.png" alt="G Yeswanth" class="w-full h-full object-cover object-top">
@@ -912,6 +913,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
