--- a/index.html
+++ b/index.html
@@ -303,7 +303,61 @@ color: white;
 </div>
 </div>
 <div class="order-1 lg:order-2">
-<img src="https://readdy.ai/api/search-image?query=professional%20software%20engineer%20working%20at%20modern%20office%2C%20sitting%20at%20desk%20with%20multiple%20monitors%2C%20coding%2C%20creative%20workspace%2C%20plants%2C%20modern%20office%20environment%2C%20high%20quality%20professional%20photo&width=600&height=800&seq=2&orientation=portrait" alt="John Anderson" class="w-full h-auto rounded-lg shadow-lg">
+<div class="typewriter-container bg-gray-800 rounded-lg p-6 max-w-2xl">
+  <div id="typewriter" class="text-green-400 font-mono h-40 overflow-hidden"></div>
+  <div class="terminal-bar flex items-center mt-2">
+    <div class="flex gap-2 mr-4">
+      <div class="w-3 h-3 rounded-full bg-red-500"></div>
+      <div class="w-3 h-3 rounded-full bg-yellow-500"></div>
+      <div class="w-3 h-3 rounded-full bg-green-500"></div>
+    </div>
+    <div class="text-xs text-gray-400">bash — 80×24</div>
+  </div>
+</div>
+<script>
+const phrases = [
+  ">>> Building AI models...",
+  ">>> Training neural networks...", 
+  ">>> Developing web applications...",
+  ">>> Analyzing data patterns..."
+];
+const el = document.getElementById('typewriter');
+let sleepTime = 100;
+let currentContent = [];
+const writeLoop = async () => {
+  while (true) {
+    for (let i = 0; i < phrases.length; i++) {
+      let curWord = phrases[i];
+      for (let j = 0; j < curWord.length; j++) {
+        currentContent[i] = curWord.substring(0, j + 1);
+        updateDisplay();
+        await new Promise(resolve => setTimeout(resolve, sleepTime));
+      }
+      if (i < phrases.length - 1) {
+        currentContent[i] = currentContent[i] + "\n";
+        updateDisplay();
+      }
+      await new Promise(resolve => setTimeout(resolve, sleepTime * 3));
+    }
+    await new Promise(resolve => setTimeout(resolve, sleepTime * 10));
+    for (let i = 0; i < phrases.length; i++) {
+      let curContent = currentContent[i];
+      for (let j = curContent.length; j > 0; j--) {
+        currentContent[i] = curContent.substring(0, j - 1);
+        updateDisplay();
+        await new Promise(resolve => setTimeout(resolve, sleepTime / 2));
+      }
+    }
+    currentContent = [];
+    updateDisplay();
+    await new Promise(resolve => setTimeout(resolve, sleepTime * 5));
+  }
+};
+function updateDisplay() {
+  el.innerText = currentContent.join("");
+}
+writeLoop();
+</script>
 </div>
 </div>
 </div>
@@ -913,6 +967,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
