--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ color: white;
 <div class="order-2 lg:order-1">
 <h3 class="text-2xl font-semibold mb-4">Who I Am</h3>
 <p class="text-gray-700 mb-6">I'm G Yeswanth, a second-year B.Tech student at Panimalar Engineering College, passionate about building impactful web applications and exploring the fields of Artificial Intelligence and Data Science.</p>
-<p class="text-gray-700 mb-8">As an aspiring Full-Stack Developer with interests in AI and Cybersecurity, I apply my skills in React.js, Flask, and PostgreSQL to real-world projects. My academic background in AI, along with hands-on internships, helps me bridge theory with practice.</p>
+<p class="text-gray-700 mb-8">As an aspiring Full-Stack Developer with interests in AI, Data Science and Cybersecurity, I apply my skills in React.js, Flask, and PostgreSQL to real-world projects. My academic background in AI, along with hands-on internships, helps me bridge theory with practice.</p>
 <h3 class="text-2xl font-semibold mb-4">My Skills</h3>
 <div class="space-y-4">
 <div>
@@ -967,6 +967,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
