--- a/index.html
+++ b/index.html
@@ -745,20 +745,17 @@ Send Message
 </div>
 <div>
 <h4 class="font-semibold text-gray-900 mb-1">LinkedIn</h4>
-<a href="https://www.linkedin.com/in/yashwanth--s" target="_blank" class="text-primary hover:underline">linkedin.com/in/yashwanth--s</a>
+<a href="https://www.linkedin.com/in/yeswanthg" target="_blank" class="text-primary hover:underline">linkedin.com/in/yashwanth--s</a>
 </div>
 </div>
 <div class="pt-6">
 <h4 class="font-semibold text-gray-900 mb-4">Connect With Me</h4>
 <div class="flex space-x-4">
-<a href="https://www.linkedin.com/in/yashwanth--s/" target="_blank" class="w-10 h-10 flex items-center justify-center bg-gray-200 hover:bg-primary hover:text-white text-gray-700 rounded-full transition-colors">
+<a href="https://www.linkedin.com/in/yeswanthg" target="_blank" class="w-10 h-10 flex items-center justify-center bg-gray-200 hover:bg-primary hover:text-white text-gray-700 rounded-full transition-colors">
 <i class="ri-linkedin-fill ri-lg"></i>
 </a>
-<a href="https://github.com/yxshx6tence" target="_blank" class="w-10 h-10 flex items-center justify-center bg-gray-200 hover:bg-primary hover:text-white text-gray-700 rounded-full transition-colors">
+<a href="https://github.com/yeswanth-geattam" target="_blank" class="w-10 h-10 flex items-center justify-center bg-gray-200 hover:bg-primary hover:text-white text-gray-700 rounded-full transition-colors">
 <i class="ri-github-fill ri-lg"></i>
-</a>
-<a href="https://www.threads.com/@yash_x6tence?igshid=NTc4MTIwNjQ2YQ==" target="_blank" class="w-10 h-10 flex items-center justify-center bg-gray-200 hover:bg-primary hover:text-white text-gray-700 rounded-full transition-colors">
-<i class="ri-threads-fill ri-lg"></i>
 </a>
 </div>
 </div>
@@ -776,14 +773,11 @@ Send Message
 <a href="#home" class="text-2xl font-['Pacifico'] text-white mb-4 inline-block">G Yeswanth</a>
 <p class="text-gray-400 mb-6 max-w-md">Passionate about creating beautiful, functional, and user-centered digital experiences that make a difference.</p>
 <div class="flex space-x-4">
-<a href="https://www.linkedin.com/in/yashwanth--s/" target="_blank" class="w-10 h-10 flex items-center justify-center bg-gray-800 hover:bg-primary text-white rounded-full transition-colors">
+<a href="https://www.linkedin.com/in/yeswanthg/" target="_blank" class="w-10 h-10 flex items-center justify-center bg-gray-800 hover:bg-primary text-white rounded-full transition-colors">
 <i class="ri-linkedin-fill ri-lg"></i>
 </a>
-<a href="https://github.com/yxshx6tence" target="_blank" class="w-10 h-10 flex items-center justify-center bg-gray-800 hover:bg-primary text-white rounded-full transition-colors">
+<a href="https://github.com/yeswanth-geattam" target="_blank" class="w-10 h-10 flex items-center justify-center bg-gray-800 hover:bg-primary text-white rounded-full transition-colors">
 <i class="ri-github-fill ri-lg"></i>
-</a>
-<a href="https://www.threads.com/@yash_x6tence?igshid=NTc4MTIwNjQ2YQ==" target="_blank" class="w-10 h-10 flex items-center justify-center bg-gray-800 hover:bg-primary text-white rounded-full transition-colors">
-<i class="ri-threads-fill ri-lg"></i>
 </a>
 </div>
 </div>
@@ -967,6 +961,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
