--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@ Send Message
 </div>
 <div>
 <h4 class="font-semibold text-gray-900 mb-1">LinkedIn</h4>
-<a href="https://www.linkedin.com/in/yeswanthg" target="_blank" class="text-primary hover:underline">linkedin.com/in/yashwanth--s</a>
+<a href="https://www.linkedin.com/in/g-yeswanth" target="_blank" class="text-primary hover:underline">linkedin.com/in/g-yeswanth</a>
 </div>
 </div>
 <div class="pt-6">
@@ -961,6 +961,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
