--- a/index.html
+++ b/index.html
@@ -745,13 +745,13 @@ Send Message
 </div>
 <div>
 <h4 class="font-semibold text-gray-900 mb-1">LinkedIn</h4>
-<a href="https://www.linkedin.com/in/g-yeswanth" target="_blank" class="text-primary hover:underline">linkedin.com/in/g-yeswanth</a>
+<a href="https://www.linkedin.com/in/g-yeswanth-a61373309" target="_blank" class="text-primary hover:underline">linkedin.com/in/g-yeswanth</a>
 </div>
 </div>
 <div class="pt-6">
 <h4 class="font-semibold text-gray-900 mb-4">Connect With Me</h4>
 <div class="flex space-x-4">
-<a href="https://www.linkedin.com/in/yeswanthg" target="_blank" class="w-10 h-10 flex items-center justify-center bg-gray-200 hover:bg-primary hover:text-white text-gray-700 rounded-full transition-colors">
+<a href="https://www.linkedin.com/in/g-yeswanth-a61373309" target="_blank" class="w-10 h-10 flex items-center justify-center bg-gray-200 hover:bg-primary hover:text-white text-gray-700 rounded-full transition-colors">
 <i class="ri-linkedin-fill ri-lg"></i>
 </a>
 <a href="https://github.com/yeswanth-geattam" target="_blank" class="w-10 h-10 flex items-center justify-center bg-gray-200 hover:bg-primary hover:text-white text-gray-700 rounded-full transition-colors">
@@ -961,6 +961,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
