--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <p class="text-gray-700 mb-4">Professional certification in Oracle Cloud Infrastructure's Generative AI capabilities and implementations.</p>
 <div class="flex justify-between items-center">
 <span class="text-gray-500">Issued: 2024</span>
-<a href="./certificate/2023PECAI340 ORACLE.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
+<a href="./certificate/eCertificate (6).pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
 <span class="w-48 h-48 rounded rotate-[-40deg] bg-indigo-600 absolute bottom-0 left-0 -translate-x-full ease-out duration-500 transition-all translate-y-full mb-9 ml-9 group-hover:ml-0 group-hover:mb-32 group-hover:translate-x-0"></span>
 <span class="relative w-full text-left text-white transition-colors duration-300 ease-in-out group-hover:text-indigo-300">View</span>
 </a>
@@ -961,6 +961,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
