--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@ Send Message
 <a href="#home" class="text-2xl font-['Pacifico'] text-white mb-4 inline-block">G Yeswanth</a>
 <p class="text-gray-400 mb-6 max-w-md">Passionate about creating beautiful, functional, and user-centered digital experiences that make a difference.</p>
 <div class="flex space-x-4">
-<a href="https://www.linkedin.com/in/yeswanthg/" target="_blank" class="w-10 h-10 flex items-center justify-center bg-gray-800 hover:bg-primary text-white rounded-full transition-colors">
+<a href="https://www.linkedin.com/in/g-yeswanth-a61373309" target="_blank" class="w-10 h-10 flex items-center justify-center bg-gray-800 hover:bg-primary text-white rounded-full transition-colors">
 <i class="ri-linkedin-fill ri-lg"></i>
 </a>
 <a href="https://github.com/yeswanth-geattam" target="_blank" class="w-10 h-10 flex items-center justify-center bg-gray-800 hover:bg-primary text-white rounded-full transition-colors">
@@ -961,6 +961,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
