--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ writeLoop();
 <!-- Project 1 -->
 <div class="project-card bg-white/30 backdrop-blur-sm rounded-lg overflow-hidden shadow-lg border border-white/20 hover:transform hover:scale-105 transition-all duration-300" data-category="web">
 <div class="h-56 overflow-hidden">
-<img src="./img/Music Website.png" alt="E-commerce Platform" class="w-full h-full object-cover object-top transition-transform duration-500 hover:scale-110">
+<img src="./img/Green and White Illustrated World Environment Day YouTube Thumbnail.png" alt="E-commerce Platform" class="w-full h-full object-cover object-top transition-transform duration-500 hover:scale-110">
 </div>
 <div class="p-6">
 <h3 class="text-xl font-semibold mb-2">Green House Emission Project</h3>
@@ -393,7 +393,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <!-- Project 2 -->
 <div class="project-card bg-white/30 backdrop-blur-sm rounded-lg overflow-hidden shadow-lg border border-white/20 hover:transform hover:scale-105 transition-all duration-300" data-category="web">
 <div class="h-56 overflow-hidden">
-<img src="./img/UX Student Portfolio Website.png"Portfolio Website" class="w-full h-full object-cover object-top transition-transform duration-500 hover:scale-110">
+<img src="./img/Dark Navy Blue Game Youtube Thumbnail.png"Portfolio Website" class="w-full h-full object-cover object-top transition-transform duration-500 hover:scale-110">
 </div>
 <div class="p-6">
 <h3 class="text-xl font-semibold mb-2">Web Development Portfolio (HTML Implementation)</h3>
@@ -515,7 +515,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <!-- Certificate 2 -->
 <div class="certificate-card bg-white rounded-lg overflow-hidden shadow-md">
 <div class="h-48 bg-gray-100 flex items-center justify-center p-6">
-<img src="./img/eletronic art.png" alt="EA Software Engineering Certificate" class="max-w-full max-h-full object-contain">
+<img src="./img/Blue Illustration Digital Marketing Strategy YouTube Thumbnail.png" alt="EA Software Engineering Certificate" class="max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
 <h3 class="text-xl font-semibold mb-2">HP Life Data Science & Analytics</h3>
@@ -533,7 +533,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <!-- Certificate 3 -->
 <div class="certificate-card bg-white rounded-lg overflow-hidden shadow-md">
 <div class="h-48 bg-gray-100 flex items-center justify-center p-6">
-<img src="./img/ChatGPT Image Jun 11, 2025, 03_08_37 PM.png" alt="IEEEXtreme Certificate" class="max-w-full max-h-full object-contain">
+<img src="./img/Yellow White Bold Best AI Websites YouTube Thumbnail.png" alt="IEEEXtreme Certificate" class="max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
 <h3 class="text-xl font-semibold mb-2">IBM SkillsBuild AI Certificate</h3>
@@ -551,7 +551,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <!-- Certificate 4 -->
 <div class="certificate-card bg-white rounded-lg overflow-hidden shadow-md">
 <div class="h-48 bg-gray-100 flex items-center justify-center p-6">
-<img src="./img/react workshop.png" alt="React Workshop Certificate" class="max-w-full max-h-full object-contain">
+<img src="./img/Red & White Modern Bold Artificial Intelligence Review YouTube Thumbnail.png" alt="React Workshop Certificate" class="max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
 <h3 class="text-xl font-semibold mb-2">Edunet – Artificial Intelligence</h3>
@@ -605,7 +605,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <!-- Certificate 7 -->
  <div class="certificate-card bg-white rounded-lg overflow-hidden shadow-md">
 <div class="h-48 bg-gray-100 flex items-center justify-center p-6">
-<img src="./img/infosys springbird.png" width="350" height="300" alt="Artificial Intelligence Foundation class="max-w-full max-h-full object-contain">
+<img src="./img/Pink Purple and Black Gradient Bold 3D Robot Illustration Elegant Future Technology YouTube Thumbnail.png" width="350" height="300" alt="Artificial Intelligence Foundation class="max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
 <h3 class="text-xl font-semibold mb-2">Generative AI Landscape</h3>
@@ -641,7 +641,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <!-- Certificate 9 -->
  <div class="certificate-card bg-white rounded-lg overflow-hidden shadow-md">
 <div class="h-48 bg-gray-100 flex items-center justify-center p-6">
-<img src="./img/some one.jpg" width="250" height="150" alt="Artificial Intelligence Foundation class="max-w-full max-h-full object-contain">
+<img src="./img/Green and Yellow Gradient Illustrative Agriculture Farming Services YouTube Thumbnail.jpg" width="250" height="150" alt="Artificial Intelligence Foundation class="max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
 <h3 class="text-xl font-semibold mb-2">Remote Sensing Data Analytics for Crop Production Forecasting</h3>
@@ -952,6 +952,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
