--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <!-- Certificate 9 -->
  <div class="certificate-card bg-white rounded-lg overflow-hidden shadow-md">
 <div class="h-48 bg-gray-100 flex items-center justify-center p-6">
-<img src="./img/Green and Yellow Gradient Illustrative Agriculture Farming Services YouTube Thumbnail.jpg" width="250" height="150" alt="Artificial Intelligence Foundation class="max-w-full max-h-full object-contain">
+<img src="./img/Green and Yellow Gradient Illustrative Agriculture Farming Services YouTube Thumbnail.png" width="250" height="150" alt="ISRO LLM"max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
 <h3 class="text-xl font-semibold mb-2">Remote Sensing Data Analytics for Crop Production Forecasting</h3>
@@ -952,6 +952,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
