--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ writeLoop();
 <!-- Project 1 -->
 <div class="project-card bg-white/30 backdrop-blur-sm rounded-lg overflow-hidden shadow-lg border border-white/20 hover:transform hover:scale-105 transition-all duration-300" data-category="web">
 <div class="h-56 overflow-hidden">
-<img src="./img/Green and White Illustrated World Environment Day YouTube Thumbnail.png" alt="E-commerce Platform" class="w-full h-full object-cover object-top transition-transform duration-500 hover:scale-110">
+<img src="./img/Green and White Illustrated World Environment Day YouTube Thumbnail.png" alt="greenhouse project" class="w-full h-full object-cover object-top transition-transform duration-500 hover:scale-110">
 </div>
 <div class="p-6">
 <h3 class="text-xl font-semibold mb-2">Green House Emission Project</h3>
@@ -515,7 +515,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <!-- Certificate 2 -->
 <div class="certificate-card bg-white rounded-lg overflow-hidden shadow-md">
 <div class="h-48 bg-gray-100 flex items-center justify-center p-6">
-<img src="./img/Blue Illustration Digital Marketing Strategy YouTube Thumbnail.png" alt="EA Software Engineering Certificate" class="max-w-full max-h-full object-contain">
+<img src="./img/Blue Illustration Digital Marketing Strategy YouTube Thumbnail.png" alt="Certificate" class="max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
 <h3 class="text-xl font-semibold mb-2">HP Life Data Science & Analytics</h3>
@@ -533,14 +533,14 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <!-- Certificate 3 -->
 <div class="certificate-card bg-white rounded-lg overflow-hidden shadow-md">
 <div class="h-48 bg-gray-100 flex items-center justify-center p-6">
-<img src="./img/Yellow White Bold Best AI Websites YouTube Thumbnail.png" alt="IEEEXtreme Certificate" class="max-w-full max-h-full object-contain">
+<img src="./img/Yellow White Bold Best AI Websites YouTube Thumbnail.png" alt="Certificate" class="max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
 <h3 class="text-xl font-semibold mb-2">IBM SkillsBuild AI Certificate</h3>
 <p class="text-gray-600 mb-3">IBM SkillsBuild</p>
 <p class="text-gray-700 mb-4"> Learned AI concepts, algorithms, and real-world applications. </p>
 <div class="flex justify-between items-center">
-<span class="text-gray-500">Issued: 2024</span>
+<span class="text-gray-500">Issued: 2025</span>
 <a href="./certificate/Brave.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
 <span class="w-48 h-48 rounded rotate-[-40deg] bg-indigo-600 absolute bottom-0 left-0 -translate-x-full ease-out duration-500 transition-all translate-y-full mb-9 ml-9 group-hover:ml-0 group-hover:mb-32 group-hover:translate-x-0"></span>
 <span class="relative w-full text-left text-white transition-colors duration-300 ease-in-out group-hover:text-indigo-300">View</span>
@@ -551,10 +551,10 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <!-- Certificate 4 -->
 <div class="certificate-card bg-white rounded-lg overflow-hidden shadow-md">
 <div class="h-48 bg-gray-100 flex items-center justify-center p-6">
-<img src="./img/Red & White Modern Bold Artificial Intelligence Review YouTube Thumbnail.png" alt="React Workshop Certificate" class="max-w-full max-h-full object-contain">
+<img src="./img/Red & White Modern Bold Artificial Intelligence Review YouTube Thumbnail.png" alt="Certificate" class="max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
-<h3 class="text-xl font-semibold mb-2">Edunet – Artificial Intelligence</h3>
+<h3 class="text-xl font-semibold mb-2">Artificial Intelligence</h3>
 <p class="text-gray-600 mb-3">Edunet</p>
 <p class="text-gray-700 mb-4">Completed foundational training in AI principles and applications.</p>
 <div class="flex justify-between items-center">
@@ -594,7 +594,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <p class="text-gray-600 mb-3">Nasscom</p>
 <p class="text-gray-700 mb-4">Comprehensive introduction to data science concepts, including statistics, machine learning, and data analysis.</p>
 <div class="flex justify-between items-center">
-<span class="text-gray-500">Issued: 2024</span>
+<span class="text-gray-500">Issued: 2025</span>
 <a href="./certificate/2023PECAI340 NASSCOM 2.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
 <span class="w-48 h-48 rounded rotate-[-40deg] bg-indigo-600 absolute bottom-0 left-0 -translate-x-full ease-out duration-500 transition-all translate-y-full mb-9 ml-9 group-hover:ml-0 group-hover:mb-32 group-hover:translate-x-0"></span>
 <span class="relative w-full text-left text-white transition-colors duration-300 ease-in-out group-hover:text-indigo-300">View</span>
@@ -605,7 +605,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <!-- Certificate 7 -->
  <div class="certificate-card bg-white rounded-lg overflow-hidden shadow-md">
 <div class="h-48 bg-gray-100 flex items-center justify-center p-6">
-<img src="./img/Pink Purple and Black Gradient Bold 3D Robot Illustration Elegant Future Technology YouTube Thumbnail.png" width="350" height="300" alt="Artificial Intelligence Foundation class="max-w-full max-h-full object-contain">
+<img src="./img/Pink Purple and Black Gradient Bold 3D Robot Illustration Elegant Future Technology YouTube Thumbnail.png" width="350" height="300" alt="Certificate"max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
 <h3 class="text-xl font-semibold mb-2">Generative AI Landscape</h3>
@@ -623,7 +623,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <!-- Certificate 8 -->
  <div class="certificate-card bg-white rounded-lg overflow-hidden shadow-md">
 <div class="h-48 bg-gray-100 flex items-center justify-center p-6">
-<img src="./img/service now 1.jpg" width="250" height="150"alt="Artificial Intelligence Foundation class="max-w-full max-h-full object-contain">
+<img src="./img/service now 1.jpg" width="250" height="150"alt="Certificate"max-w-full max-h-full object-contain">
 </div>
 <div class="p-6">
 <h3 class="text-xl font-semibold mb-2">Micro-Certification – Welcome to ServiceNow</h3>
@@ -952,6 +952,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
