--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <p class="text-gray-700 mb-4">Completed hands-on software engineering simulation focusing on game development and industry practices.</p>
 <div class="flex justify-between items-center">
 <span class="text-gray-500">Issued: 2025</span>
-<a href="./certificate/forage completion_certificate.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
+<a href="./certificate/hplife.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
 <span class="w-48 h-48 rounded rotate-[-40deg] bg-indigo-600 absolute bottom-0 left-0 -translate-x-full ease-out duration-500 transition-all translate-y-full mb-9 ml-9 group-hover:ml-0 group-hover:mb-32 group-hover:translate-x-0"></span>
 <span class="relative w-full text-left text-white transition-colors duration-300 ease-in-out group-hover:text-indigo-300">View</span>
 </a>
@@ -541,7 +541,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <p class="text-gray-700 mb-4"> Learned AI concepts, algorithms, and real-world applications. </p>
 <div class="flex justify-between items-center">
 <span class="text-gray-500">Issued: 2025</span>
-<a href="./certificate/Brave.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
+<a href="./certificate/ibm.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
 <span class="w-48 h-48 rounded rotate-[-40deg] bg-indigo-600 absolute bottom-0 left-0 -translate-x-full ease-out duration-500 transition-all translate-y-full mb-9 ml-9 group-hover:ml-0 group-hover:mb-32 group-hover:translate-x-0"></span>
 <span class="relative w-full text-left text-white transition-colors duration-300 ease-in-out group-hover:text-indigo-300">View</span>
 </a>
@@ -559,7 +559,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <p class="text-gray-700 mb-4">Completed foundational training in AI principles and applications.</p>
 <div class="flex justify-between items-center">
 <span class="text-gray-500">Issued: 2025</span>
-<a href="./certificate/LUESCAPR12572 (1).pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
+<a href="./certificate/Ai_Completed.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
 <span class="w-48 h-48 rounded rotate-[-40deg] bg-indigo-600 absolute bottom-0 left-0 -translate-x-full ease-out duration-500 transition-all translate-y-full mb-9 ml-9 group-hover:ml-0 group-hover:mb-32 group-hover:translate-x-0"></span>
 <span class="relative w-full text-left text-white transition-colors duration-300 ease-in-out group-hover:text-indigo-300">View</span>
 </a>
@@ -577,7 +577,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <p class="text-gray-700 mb-4">Comprehensive introduction to data science concepts, including statistics, machine learning, and data analysis.</p>
 <div class="flex justify-between items-center">
 <span class="text-gray-500">Issued: 2024</span>
-<a href="./certificate/2023PECAI340 NASSCOM 1.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
+<a href="./certificate/YeswanthG-datascience.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
 <span class="w-48 h-48 rounded rotate-[-40deg] bg-indigo-600 absolute bottom-0 left-0 -translate-x-full ease-out duration-500 transition-all translate-y-full mb-9 ml-9 group-hover:ml-0 group-hover:mb-32 group-hover:translate-x-0"></span>
 <span class="relative w-full text-left text-white transition-colors duration-300 ease-in-out group-hover:text-indigo-300">View</span>
 </a>
@@ -595,7 +595,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <p class="text-gray-700 mb-4">Comprehensive introduction to data science concepts, including statistics, machine learning, and data analysis.</p>
 <div class="flex justify-between items-center">
 <span class="text-gray-500">Issued: 2025</span>
-<a href="./certificate/2023PECAI340 NASSCOM 2.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
+<a href="./certificate/Yeswanth+G_cyber.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
 <span class="w-48 h-48 rounded rotate-[-40deg] bg-indigo-600 absolute bottom-0 left-0 -translate-x-full ease-out duration-500 transition-all translate-y-full mb-9 ml-9 group-hover:ml-0 group-hover:mb-32 group-hover:translate-x-0"></span>
 <span class="relative w-full text-left text-white transition-colors duration-300 ease-in-out group-hover:text-indigo-300">View</span>
 </a>
@@ -613,7 +613,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <p class="text-gray-700 mb-4">Explored the ecosystem, trends, and applications of generative AI technologies.</p>
 <div class="flex justify-between items-center">
 <span class="text-gray-500">Issued: 2024</span>
-<a href="./certificate/2023PECAI340 INFOSYS CERTIFICATE.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
+<a href="./certificate/ai cer.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
 <span class="w-48 h-48 rounded rotate-[-40deg] bg-indigo-600 absolute bottom-0 left-0 -translate-x-full ease-out duration-500 transition-all translate-y-full mb-9 ml-9 group-hover:ml-0 group-hover:mb-32 group-hover:translate-x-0"></span>
 <span class="relative w-full text-left text-white transition-colors duration-300 ease-in-out group-hover:text-indigo-100">View</span>
 </a>
@@ -631,7 +631,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <p class="text-gray-700 mb-4">Completed introductory micro-certification focused on navigating and understanding the ServiceNow platform.</p>
 <div class="flex justify-between items-center">
 <span class="text-gray-500">Issued: 2025</span>
-<a href="./certificate/340-Micro-Certification.pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
+<a href="./certificate/Micro-Certification - Welcome to ServiceNow (1).pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
 <span class="w-48 h-48 rounded rotate-[-40deg] bg-indigo-600 absolute bottom-0 left-0 -translate-x-full ease-out duration-500 transition-all translate-y-full mb-9 ml-9 group-hover:ml-0 group-hover:mb-32 group-hover:translate-x-0"></span>
 <span class="relative w-full text-left text-white transition-colors duration-300 ease-in-out group-hover:text-indigo-100">View</span>
 </a>
@@ -649,7 +649,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 <p class="text-gray-700 mb-4">Gained proficiency in analyzing satellite data for agricultural forecasting.</p>
 <div class="flex justify-between items-center">
 <span class="text-gray-500">Issued: 2025</span>
-<a href="./certificate/2025CSMOOC0126_cropped (1).pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
+<a href="./certificate/certificate_20251682758691 (1).pdf" target="_blank" class="relative inline-flex items-center justify-center px-6 py-2 overflow-hidden font-medium transition-all bg-indigo-400 rounded-md hover:bg-white group">
 <span class="w-48 h-48 rounded rotate-[-40deg] bg-indigo-600 absolute bottom-0 left-0 -translate-x-full ease-out duration-500 transition-all translate-y-full mb-9 ml-9 group-hover:ml-0 group-hover:mb-32 group-hover:translate-x-0"></span>
 <span class="relative w-full text-left text-white transition-colors duration-300 ease-in-out group-hover:text-indigo-100">View</span>
 </a>
@@ -952,6 +952,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
