--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ View Project <i class="ri-arrow-right-line ml-1"></i>
 </div>
 <h3 class="text-2xl font-semibold text-white">Download Resume</h3>
 </div>
-<a href="./resume/G Yeswanth - Web Application Developer Resume.pdf" target="_blank" class="inline-flex items-center bg-primary text-white px-6 py-3 rounded-button font-medium hover:bg-indigo-600 transition-colors whitespace-nowrap">
+<a href="./resume/Resume yeswanth.pdf" target="_blank" class="inline-flex items-center bg-primary text-white px-6 py-3 rounded-button font-medium hover:bg-indigo-600 transition-colors whitespace-nowrap">
 <i class="ri-file-download-line mr-2"></i> Download Full Resume
 </a>
 </div>
@@ -952,6 +952,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
