--- a/index.html
+++ b/index.html
@@ -404,6 +404,8 @@ writeLoop();
             <div class="flex justify-center flex-wrap gap-3 mb-12">
                 <button class="filter-btn active px-5 py-2 rounded-button bg-indigo-600 text-white font-medium whitespace-nowrap transition-colors" data-filter="all">All Projects</button>
                 <button class="filter-btn px-5 py-2 rounded-button bg-gray-200 text-gray-800 font-medium whitespace-nowrap transition-colors hover:bg-gray-300" data-filter="web">Web Development</button>
+                <button class="filter-btn px-5 py-2 rounded-button bg-gray-200 text-gray-800 font-medium whitespace-nowrap transition-colors hover:bg-gray-300" data-filter="web">Machine Learning</button>
+
             </div>
             
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8" id="Projects-grid">
@@ -526,14 +528,14 @@ writeLoop();
 </div>
 <div class="timeline-item">
 <h4 class="text-xl font-semibold text-white">Green Intership</h4>
-<p class="text-primary font-medium">1M1B |July 2025 - July 2025 (2 month)</p>
+<p class="text-primary font-medium">1M1B |July 2025 - August 2025 (2 month)</p>
 <p class="text-gray-300 mt-2">As a Green Intern at 1M1B (One Million for One Billion), I participated in sustainability-focused workshops and expert-led sessions on environmental innovation. I explored climate change challenges and developed solutions aligned with the UN Sustainable Development Goals. The internship helped me enhance my leadership, problem-solving, and innovation skills in the context of environmental responsibility.</p>
 <p class="text-gray-300 mt-2"><b>Outcome:</b> Collaborated with peers to ideate sustainable tech-driven solutions.</p>
 <p class="text-gray-400 mt-2">#GreenInternship #Sustainability</p>
 </div>
 <div class="timeline-item">
 <h4 class="text-xl font-semibold text-white">Green Skills</h4>
-<p class="text-primary font-medium">Edunet Foundation (Shell) |July 2025 - July 2025 (2 month)</p>
+<p class="text-primary font-medium">Edunet Foundation (Shell) |July 2025 - July 2025 (1 month)</p>
 <p class="text-gray-300 mt-2">Developed a Python-based CO₂ emission prediction tool using pandas, numpy, matplotlib, and scikit-learn.</p>
 <p class="text-gray-300 mt-2"><b>Outcome:</b> Created an interactive tool that forecasts country-specific CO₂ emissions for 2025–2035, helping visualize environmental trends for sustainability insights.</p>
 <p class="text-gray-400 mt-2">#GreenSkills #MachineLearning</p>
@@ -1036,6 +1038,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
