--- a/index.html
+++ b/index.html
@@ -404,8 +404,8 @@ writeLoop();
             <div class="flex justify-center flex-wrap gap-3 mb-12">
                 <button class="filter-btn active px-5 py-2 rounded-button bg-indigo-600 text-white font-medium whitespace-nowrap transition-colors" data-filter="all">All Projects</button>
                 <button class="filter-btn px-5 py-2 rounded-button bg-gray-200 text-gray-800 font-medium whitespace-nowrap transition-colors hover:bg-gray-300" data-filter="web">Web Development</button>
-                <button class="filter-btn px-5 py-2 rounded-button bg-gray-200 text-gray-800 font-medium whitespace-nowrap transition-colors hover:bg-gray-300" data-filter="web">Machine Learning</button>
-
+                <button class="filter-btn px-5 py-2 rounded-button bg-gray-200 text-gray-800 font-medium whitespace-nowrap transition-colors hover:bg-gray-300" data-filter="ml">Machine Learning</button>
+                <button class="filter-btn px-5 py-2 rounded-button bg-gray-200 text-gray-800 font-medium whitespace-nowrap transition-colors hover:bg-gray-300" data-filter="data">Data Science</button>
             </div>
             
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8" id="Projects-grid">
@@ -1038,6 +1038,7 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
 
